[package]
name = "winhook_rs"
authors = ["Prime"]
version = "0.1.0"
edition = "2021"

[dependencies]
[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
]